# mutiny

./: README.md  io.github.lo2dev.Mutiny.json  meson.build  python3-python-ulid.json
data/: io.github.lo2dev.Mutiny.desktop.in  io.github.lo2dev.Mutiny.gschema.xml  io.github.lo2dev.Mutiny.metainfo.xml.in  io.github.lo2dev.Mutiny.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in
src/: main.py  meson.build  mutiny.gresource.xml  mutiny.in  window.blp  window.py
src/network/: cache.py  chat_service_api.py  session.py  websocket.py
src/ui/: chat-message.blp  chat_message.py  server-profile.blp  server_profile.py  style.css
src/ui/chat/: chat-message.blp  chat_message.py  system-message.blp  system_message.py
